# btc-lshape-long

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: .env.dev  go.mod  go.sum
docs/: 15m-index.md  15min_feature_importance.json  15min_half_close_results.csv  15min_ml_results.csv  15min_parametric_results.csv  1h-index.md  4h-index.md  4h_feature_importance.json  4h_half_close_results.csv  4h_ml_results.csv  4h_parametric_results.csv  5m-index.md  5min_dl_results.csv  5min_feature_importance.json  5min_ml_results.csv  5min_parametric_results.csv  STRATEGY_IMPLEMENTATION.md  _config.yml  backtest_report_20260423_203828.md  detection-quality.md  enhanced-strategy.md  index.md  long_half_close_feature_importance.json  long_half_close_ml_results.csv  long_half_close_parametric.csv  long_parametric_results.csv  ml-analysis-15m.md  ml-analysis-1h.md  ml-analysis-4h.md  ml-analysis-5m.md  ml-analysis.md  monthly-returns.md  monthly_analysis_results.json  multi-asset-1h.md  multi_asset_1h_details.json  multi_asset_1h_results.csv  optimization.md  parametric-15m.md  parametric-1h.md  parametric-4h.md  (+11 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
live-trading/: .env.dev  .env.example  .env.prod  Dockerfile  README.md  build.sh  podman-compose.yml  start.sh  stop.sh
scripts/: run_15m_ml_analysis.py  run_15m_parametric.py  run_4h_ml_analysis.py  run_4h_parametric.py  run_5m_dl_analysis.py  run_5m_ml_analysis.py  run_compound_backtest.py  run_detection_enhancement.py  run_enhanced_parametric.py  (+4 more)
(+54 files in other folders)
